add fonts and header, intro section

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,8 @@
 $black: #000;
 $white: #fff;
+$green: #01372A;
 
-$rubik: 'Rubik', sans-serif;
-$inter: 'Inter', sans-serif;
-$roboto: 'Roboto', sans-serif;
+$Montserrat: 'Montserrat', sans-serif;
+$SegoePrint: 'Segoe Print', sans-serif;
+$BookmanOldStyle: 'Bookman Old Style', sans-serif;
+$FuturaBookC: 'FuturaBookC', sans-serif;
