--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,36 +1,47 @@
-@font-face{
-	font-family: Rubik;
+@font-face {
+	font-family: Montserrat;
 	font-display: swap;
-	src: url("../fonts/Rubik-Regular.woff2") format("woff2"), url("../fonts/Rubik-Regular.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face{
-	font-family: Rubik;
-	font-display: swap;
-	src: url("../fonts/Rubik-Medium.woff2") format("woff2"), url("../fonts/Rubik-Medium.woff") format("woff");
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face{
-	font-family: Rubik;
-	font-display: swap;
-	src: url("../fonts/Rubik-SemiBold.woff2") format("woff2"), url("../fonts/Rubik-SemiBold.woff") format("woff");
-	font-weight: 600;
-	font-style: normal;
-}
-@font-face{
-	font-family: Inter;
-	font-display: swap;
-	src: url("../fonts/Inter-Regular.woff2") format("woff2"), url("../fonts/Inter-Regular.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face{
-	font-family: Roboto;
-	font-display: swap;
-	src: url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff");
+	src: url("../fonts/Montserrat-Regular.woff2") format("woff2"), url("../fonts/Montserrat-Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
 
+@font-face {
+	font-family: Montserrat;
+	font-display: swap;
+	src: url("../fonts/Montserrat-Medium.woff2") format("woff2"), url("../fonts/Montserrat-Medium.woff") format("woff");
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: Montserrat;
+	font-display: swap;
+	src: url("../fonts/Montserrat-SemiBold.woff2") format("woff2"), url("../fonts/Montserrat-SemiBold.woff") format("woff");
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: SegoePrint;
+	font-display: swap;
+	src: url("../fonts/SegoePrint-SemiBold.woff2") format("woff2"), url("../fonts/SegoePrint-SemiBold.woff") format("woff");
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: BookmanOldStyle;
+	font-display: swap;
+	src: url("../fonts/BookmanOldStyle-Regular.woff2") format("woff2"), url("../fonts/BookmanOldStyle-Regular.woff") format("woff");
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: FuturaBookC;
+	font-display: swap;
+	src: url("../fonts/FuturaBookC-Ragular.woff2") format("woff2"), url("../fonts/FuturaBookC-Ragular.woff") format("woff");
+	font-weight: 400;
+	font-style: normal;
+}
