--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,20 +6,230 @@
 
 
 body {
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: 400;
-	line-height: 1.2;
-	font-family: 'Rubik', sans-serif;
+	line-height: 1.222;
+	font-family: $Montserrat;
 	color: $black;
 	background-color: $white;
 }
 
 .container {
-	max-width: 1200px;
+	max-width: 1232px;
 	margin: 0 auto;
-	padding: 0 15px;
+	padding: 0 20px;
 }
 
+
+/* HEADER */
+.header {
+	padding: 28px 0;
+
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	&__logo {
+	}
+
+	&-logo {
+
+		&__link {
+			display: flex;
+			align-items: center;
+		}
+	
+		&__img {
+			margin-right: 13px;
+		}
+	
+		&__texts {
+			span {
+				display: block;
+
+				&:first-child {
+					font-weight: 500;
+					text-transform: capitalize;
+					color: #01372A;
+				}
+
+				&:last-child {
+					font-family: 'Segoe Print';
+					font-size: 12px;
+					line-height: 1.750;
+					color: #000000;
+					margin: -7px 0 0 37px;
+				}
+			}
+		}
+	}
+
+	&__nav {
+	}
+
+	&-nav {
+
+		&__list {
+			display: flex;
+		}
+	
+		&__item {
+			margin-right: 45px;
+			position: relative;
+
+			&:last-child {
+				margin-right: 0;
+			}
+
+			&:before {
+				content: "";
+				display: block;
+				width: 10px;
+				height: 5px;
+				background-image: url("@img/language-arrow.svg");
+				position: absolute;
+				right: -15px;
+				top: 55%;
+				transform: translateY(-45%);
+				cursor: pointer;
+			}
+
+			&:hover .header-nav__menu {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+	
+		&__link {
+			color: $black;
+			position: relative;
+
+			&.active {
+				padding-bottom: 8px;
+
+				&:after {
+					content: "";
+					display: block;
+					width: 100%;
+					height: 1px;
+					background-color: $green;
+					position: absolute;
+					bottom: 0;
+				}
+			}
+		}
+
+		&__menu {
+			position: absolute;
+			top: 100%;
+			padding-top: 10px;
+			background-color: #fff;
+			z-index: 100;
+
+			opacity: 0;
+			visibility: hidden;
+
+			&-item {
+				margin-bottom: 7px;
+
+				a {
+					color: $black;
+				}
+			}
+		}
+	}
+
+	&__widgets {
+		display: flex;
+		align-items: center;
+	}
+
+	&-widget {
+		&__eye, &__language {
+			cursor: pointer;
+		}
+
+		&__eye {
+			margin-right: 37px;
+		}
+	
+		&__eye-img {
+		}
+	
+		&__language {
+			padding-right: 12px;
+			position: relative;
+
+			&:before {
+				content: "";
+				display: block;
+				width: 10px;
+				height: 5px;
+				background-image: url("@img/language-arrow.svg");
+				position: absolute;
+				right: 0;
+				bottom: 5px;
+			}
+		}
+	
+		&__language-text {
+			font-weight: 500;
+			color: $green;
+		}
+	}
+}
+/* HEADER */
+
+/* INTRO */
+.intro {
+	position: relative;
+	
+	&__img {
+		width: 100%;
+	}
+
+	&__inner {
+		position: absolute;
+		top: 122px;
+	}
+
+	&__title {
+		font-family: 'Bookman Old Style';
+		max-width: 592px;
+		font-weight: 300;
+		font-size: 52px;
+		line-height: 1.173;
+		margin-bottom: 39px;
+	}
+
+	&__subtitle {
+		font-weight: 500;
+		font-size: 28px;
+		line-height: 1.214;
+		color: $green;
+		margin-bottom: 117px;
+	}
+
+	&__btn {
+		display: inline-block;
+		background-color: rgba(1, 55, 42, 0.85);
+		border-radius: 20px;
+		color: $white;
+		font-weight: 600;
+		font-size: 16px;
+		line-height: 1.25;
+		padding: 13px 36px;
+		transition: .3s linear background-color, .3s linear color;
+
+		&:hover {
+			background-color: $white;
+			color: $green;
+		}
+	}
+}
+/* INTRO */
 
 
 @import "media.scss";
