--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,12 +23,15 @@ body {
 
 /* HEADER */
 .header {
-	padding: 28px 0;
+	// padding: 28px 0;
+	// display: none;
 
 	&__inner {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		position: relative;
+		padding: 28px 0;
 	}
 
 	&__logo {
@@ -66,8 +69,20 @@ body {
 		}
 	}
 
-	&__nav {
-	}
+	// &__nav {
+	// 	&.active {
+	// 		display: block;
+	// 		position: absolute;
+	// 		top: 100%;
+	// 		width: 100%;
+	// 		background-color: $white;
+	// 		z-index: 100;
+
+	// 		.header-nav__list {
+	// 			display: block;
+	// 		}
+	// 	}
+	// }
 
 	&-nav {
 
@@ -83,19 +98,6 @@ body {
 				margin-right: 0;
 			}
 
-			&:before {
-				content: "";
-				display: block;
-				width: 10px;
-				height: 5px;
-				background-image: url("@img/language-arrow.svg");
-				position: absolute;
-				right: -15px;
-				top: 55%;
-				transform: translateY(-45%);
-				cursor: pointer;
-			}
-
 			&:hover .header-nav__menu {
 				opacity: 1;
 				visibility: visible;
@@ -105,6 +107,21 @@ body {
 		&__link {
 			color: $black;
 			position: relative;
+
+			&.have-children {
+				&:before {
+					content: "";
+					display: block;
+					width: 10px;
+					height: 5px;
+					background-image: url("@img/language-arrow.svg");
+					position: absolute;
+					right: -15px;
+					top: 55%;
+					transform: translateY(-45%) rotate(180deg);
+					cursor: pointer;
+				}
+			}
 
 			&.active {
 				padding-bottom: 8px;
@@ -124,18 +141,144 @@ body {
 		&__menu {
 			position: absolute;
 			top: 100%;
-			padding-top: 10px;
+			// padding-top: 10px;
+			padding: 10px;
+			transform: translateX(-10px);
 			background-color: #fff;
 			z-index: 100;
 
 			opacity: 0;
 			visibility: hidden;
+			transition: .3s linear;
 
 			&-item {
 				margin-bottom: 7px;
 
 				a {
 					color: $black;
+				}
+			}
+		}
+	}
+
+	&-burger {
+		&__nav {
+			max-height: 0;
+			overflow: hidden;
+			transition: .3s linear max-height;
+			// padding: 0 20px;
+
+			&.active {
+				// display: block;
+				// max-height: 400px;
+			}
+		}
+
+		&-nav {
+
+			&__list {
+				// display: flex;
+				max-width: 1232px;
+				margin: 0 auto;
+				padding: 0 20px;
+			}
+		
+			&__item {
+				margin-right: 45px;
+				margin-bottom: 10px;
+				&:last-child {
+					margin-bottom: 20px;
+				}
+				// position: relative;
+	
+				&:last-child {
+					margin-right: 0;
+				}
+	
+				// &:before {
+				// 	content: "";
+				// 	display: block;
+				// 	width: 10px;
+				// 	height: 5px;
+				// 	background-image: url("@img/language-arrow.svg");
+				// 	position: absolute;
+				// 	right: -15px;
+				// 	top: 55%;
+				// 	transform: translateY(-45%);
+				// 	cursor: pointer;
+				// }
+	
+				// &:hover .header-nav__menu {
+				// 	opacity: 1;
+				// 	visibility: visible;
+				// }
+			}
+		
+			&__link {
+				color: $black;
+				position: relative;
+
+				&.have-children {
+					&:before {
+						content: "";
+						display: block;
+						width: 10px;
+						height: 5px;
+						background-image: url("@img/language-arrow.svg");
+						position: absolute;
+						right: -15px;
+						top: 55%;
+						transform: translateY(-45%) rotate(180deg);
+						cursor: pointer;
+					}
+				}
+
+				// &:before {
+				// 	content: "";
+				// 	display: block;
+				// 	width: 10px;
+				// 	height: 5px;
+				// 	background-image: url("@img/language-arrow.svg");
+				// 	position: absolute;
+				// 	right: -15px;
+				// 	top: 55%;
+				// 	transform: translateY(-45%) rotate(180deg);
+				// 	cursor: pointer;
+				// }
+	
+				&.active {
+					padding-bottom: 8px;
+	
+					&:after {
+						content: "";
+						display: block;
+						width: 100%;
+						height: 1px;
+						background-color: $green;
+						position: absolute;
+						bottom: 0;
+					}
+				}
+			}
+	
+			&__menu {
+				// position: absolute;
+				// top: 100%;
+				// padding-top: 10px;
+				margin-top: 10px;
+				margin-left: 10px;
+				background-color: #fff;
+				z-index: 100;
+	
+				// opacity: 0;
+				// visibility: hidden;
+	
+				&-item {
+					margin-bottom: 7px;
+	
+					a {
+						color: $black;
+					}
 				}
 			}
 		}
@@ -170,13 +313,56 @@ body {
 				background-image: url("@img/language-arrow.svg");
 				position: absolute;
 				right: 0;
-				bottom: 5px;
+				bottom: 3px;
 			}
 		}
 	
 		&__language-text {
 			font-weight: 500;
 			color: $green;
+		}
+	}
+
+	&__burger {
+		width: 21px;
+		height: 16px;
+		position: relative;
+		cursor: pointer;
+		display: none;
+
+		&.active span:first-child {
+			transform: rotate(45deg);
+			top: 8px;
+		}
+
+		&.active span:nth-child(2) {
+			opacity: 0;
+		}
+
+		&.active span:last-child {
+			transform: rotate(-45deg);
+			top: 8px;
+		}
+
+		span {
+			display: block;
+			width: 100%;
+			height: 1px;
+			background-color: $black;
+			position: absolute;
+			transition: .3s linear;
+
+			&:first-child {
+				top: 0;
+			}
+
+			&:nth-child(2) {
+				top: 8px;
+			}
+
+			&:last-child {
+				top: 15px;
+			}
 		}
 	}
 }
