--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -72,6 +72,11 @@
 
 	.section {
 		padding: 90px 0;
+
+		&__title {
+			font-size: 28px;
+			margin-bottom: 30px;
+		}
 	}
 
 	.info {
@@ -100,6 +105,16 @@
 			&__subtitle {
 				max-width: none;
 			}
+		}
+	}
+
+	.news {
+		&__items {
+			display: block;
+		}
+
+		&__item {
+			width: 100%;
 		}
 	}
 }
@@ -157,7 +172,21 @@
 }
 
 @media(max-width: 480px) {
-    
+    .news {
+		&-item {
+			&__wrapper {
+				padding: 40px 0 40px 15px;
+			}
+		}
+
+		&__wrapper-btn {
+			text-align: center;
+		}
+
+		&__btn {
+			width: 100%;
+		}
+	}
 }
 
 @media(max-width: 420px) {
