pavilions and slider sections

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -592,4 +592,136 @@ body {
 }
 /* NEWS */
 
+/* PAVILION */
+.pavilions {
+	&__content {
+		background-image: url("@img/pavilions/pavilions-bg.jpg");
+		background-repeat: no-repeat;
+		display: flex;
+		justify-content: space-between;
+		overflow: hidden;
+	}
+
+	&__left {
+		width: 58%;
+	}
+
+	&__right {
+		position: relative;
+		max-width: 484px;
+		width: 42%;
+	}
+
+	&__pavilion-img {
+		// max-width: 100%;
+	}
+
+	&__wrapper-phone {
+		// background-color: $green;
+		// box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+		// transform: skewX(-10deg);
+		padding: 43px 0;
+		position: relative;
+		
+		&:before {
+			content: '';
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 100vw;
+			height: 115px;
+			transform: skew(-15deg);
+			top: 0;
+			left: -55px;
+			background-color: $green;
+			z-index: 0;
+		}
+	}
+
+	&__phone {
+		display: block;
+		
+		p {
+			font-weight: 600;
+			font-size: 24px;
+			line-height: 1.208;
+			position: relative;
+			padding-left: 36px;
+
+			color: #FFFFFF;
+
+			&:before {
+				content: "";
+				display: block;
+				width: 20px;
+				height: 20px;
+				background-image: url("@img/pavilions/phone.svg");
+				position: absolute;
+				left: 0;
+				top: 50%;
+				transform: translateY(-50%);
+			}
+		}
+	}
+
+	&__text {
+		max-width: 441px;
+		font-family: 'FuturaBookC';
+		font-size: 24px;
+		line-height: 1.125;
+		color: rgba(255, 255, 255, 0.85);
+		margin: 110px 0 66px;
+	}
+
+	&__btn {
+		display: inline-block;
+		font-weight: 600;
+		font-size: 16px;
+		line-height: 20px;
+		color: #FFFFFF;
+		background-color: rgba(1, 55, 42, 0.85);
+		border-radius: 20px;
+		padding: 13px 36px;
+		transition: 0.3s linear background-color, 0.3s linear color;
+
+		&:hover {
+			background-color: $white;
+			color: $green;
+		}
+	}
+
+	&__leafs-img {
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
+}
+/* PAVILION */
+
+/* SLIDER */
+.swiper-wrapper {
+	margin-bottom: 50px;
+}
+
+// .swiper-pagination-bullet-active {
+// 	background: #01372A;
+// }
+
+.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+	margin: 0 18px 0 0;
+
+	&:last-child {
+		margin: 0;
+	}
+}
+
+.swiper-pagination-bullet {
+	width: 12px;
+	height: 12px;
+	background-color: #01372A;
+	border-radius: 0;
+	
+}
+/* SLIDER */
+
 @import "media.scss";
