--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -169,6 +169,16 @@
 			}
 		}
 	}
+
+	.swiper {
+		&-wrapper {
+			margin-bottom: 0;
+		}
+
+		&-pagination {
+			display: none;
+		}
+	}
 }
 
 @media(max-width: 480px) {
