--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -96,6 +96,20 @@
 		padding: 60px 0 42px;
 	}
 
+	.we-produce {
+		padding: 90px 0 0 0;
+
+		&-card {
+			&__info {
+				padding: 8px 0;
+			}
+
+			&__title {
+				font-size: 18px;
+			}
+		}
+	}
+
 	.footer {
 		&__top-inner {
 			display: block;
@@ -135,7 +149,7 @@
 			justify-content: space-between;
 		}
 
-		&__phone, &__email, &__location {
+		&__phone, &__email, &__address {
 			margin-bottom: 0;
 		}
 
@@ -165,6 +179,23 @@
 
 			&__subtitle {
 				max-width: none;
+			}
+		}
+	}
+
+	.we-produce {
+		// &__cards {
+		// 	margin: 0 -5px;
+		// }
+
+		// &__col {
+		// 	padding: 0 5px;
+		// }
+
+		&-card {
+
+			&__title {
+				font-size: 16px;
 			}
 		}
 	}
@@ -256,6 +287,23 @@
 		}
 	}
 
+	.we-produce {
+		&__col {
+			width: 50%;
+
+			&:last-child {
+				width: 100%;
+				display: flex;
+				margin-top: 20px;
+
+				.we-produce__card:first-child {
+					margin-bottom: 0;
+					margin-right: 20px;
+				}
+			}
+		}
+	}
+
 	.swiper {
 		&-wrapper {
 			margin-bottom: 0;
@@ -308,6 +356,10 @@
 				}
 			}
 		}
+
+		&__phone, &__email, &__address {
+			padding-left: 35px;
+		}
 	}
 }
 
@@ -325,6 +377,30 @@
 		&-widget {
 			&__language {
 				margin-right: 20px;
+			}
+		}
+	}
+
+	.we-produce {
+		&__col {
+			width: 100%;
+			margin-bottom: 20px;
+
+			&:last-child {
+				display: block;
+				margin: 0;
+
+				.we-produce__card:first-child {
+					margin-right: 0;
+					margin-bottom: 20px;
+				}
+			}
+		}
+
+		&-card {
+			&__img {
+				height: 340px;
+				object-position: center;
 			}
 		}
 	}
