--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -565,6 +565,76 @@ body {
 }
 /* INFO */
 
+/* WE-PRODUCE */
+.we-produce {
+	padding: 120px 0 0 0;
+
+	&__title {
+	}
+
+	&__content {
+	}
+
+	&__cards {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		// column-gap: 20px;
+		margin: 0 -10px;
+	}
+
+	&__col {
+		width: 33.33333%;
+		padding: 0 10px;
+		
+		&:first-child, &:last-child {
+			.we-produce__card:first-child {
+				margin-bottom: 20px;
+			}
+		}
+
+		&:nth-child(2) {
+			.we-produce__card {
+				height: 100%;
+			}
+		}
+	}
+
+	&__card {
+		position: relative;
+	}
+
+	&-card {
+
+		&__img {
+			// max-width: 100%;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	
+		&__info {
+			padding: 19px 0;
+			background-color: rgba(1, 55, 42, 0.85);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			position: absolute;
+			bottom: 0;
+			z-index: 10;
+		}
+	
+		&__title {
+			font-weight: 600;
+			font-size: 24px;
+			line-height: 1.208;
+			color: $white;
+		}
+	}
+}
+/* WE-PRODUCE */
+
 /* NEWS */
 .news {
 	&__content {
@@ -578,6 +648,15 @@ body {
 	&__item {
 		width: 50%;
 		padding: 10px;
+		
+		a {
+			display: block;
+			transition: .3s linear transform;
+
+			&:hover {
+				transform: translateY(-10px);
+			}
+		}
 	}
 
 	&-item {
