--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -55,6 +55,16 @@
 			}
 		}
 	}
+
+	.pavilions {
+		&__leafs-img {
+			display: none;
+		}
+
+		&__text {
+			margin: 66px 0;
+		}
+	}
 }
 
 @media(max-width: 1150px) {
@@ -234,6 +244,52 @@
 
 		&__item {
 			width: 100%;
+		}
+	}
+
+	.pavilions {
+		&__content {
+			display: block;
+		}
+
+		&__left, &__right {
+			width: auto;
+		}
+
+		&__left {
+			padding: 15px;
+		}
+
+		&__pavilion-img {
+			width: 100%;
+		}
+
+		&__right {
+			max-width: none;
+
+			padding: 20px 15px;
+		}
+
+		&__wrapper-phone {
+			padding: 12px 0;
+
+			&:before {
+				width: 100%;
+				height: 48px;
+				left: 0;
+			}
+
+			p {
+				font-size: 20px;
+			}
+		}
+
+		&__phone {
+			padding: 0 15px;
+		}
+
+		&__text {
+			margin: 30px 0;
 		}
 	}
 
