--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -734,6 +734,7 @@ body {
 		display: flex;
 		justify-content: space-between;
 		overflow: hidden;
+		position: relative;
 	}
 
 	&__left {
@@ -772,8 +773,19 @@ body {
 		}
 	}
 
+	&__outside-wrapper-phone {
+		display: none;
+		position: absolute;
+		width: 100%;
+		top: 0;
+
+		&:before {
+			transform: skew(0);
+		}
+	}
+
 	&__phone {
-		display: block;
+		display: inline-block;
 		
 		p {
 			font-weight: 600;
@@ -811,7 +823,7 @@ body {
 		display: inline-block;
 		font-weight: 600;
 		font-size: 16px;
-		line-height: 20px;
+		line-height: 1.25;
 		color: #FFFFFF;
 		background-color: rgba(1, 55, 42, 0.85);
 		border-radius: 20px;
@@ -822,6 +834,12 @@ body {
 			background-color: $white;
 			color: $green;
 		}
+	}
+
+	&__outside-btn {
+		display: none;
+		text-align: center;
+		margin-top: 40px;
 	}
 
 	&__leafs-img {
