--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -19,6 +19,15 @@
 	}
 }
 
+// @media(max-width: 1300px) {
+// 	.our-addresses {
+// 		&__left, &__right {
+// 			max-width: none;
+// 			width: 50%;
+// 		}
+// 	}
+// }
+
 @media(max-width: 1200px) {
 	.header {
 		&__nav {
@@ -95,6 +104,31 @@
 	.about-us380 {
 		&__content {
 			display: none;
+		}
+	}
+}
+
+@media(max-width: 1100px) {
+	.contacts {
+		&-card {
+			&__inner {
+				flex-direction: column;
+			}
+
+			&__left, &__right {
+				max-width: none;
+			}
+
+			&__post {
+				margin-bottom: 20px;
+			}
+		}
+	}
+
+	.our-addresses {
+		&__left, &__right {
+			max-width: none;
+			width: 50%;
 		}
 	}
 }
@@ -176,13 +210,6 @@
 		}
 	}
 
-	.main {
-		&__title {
-			font-size: 28px;
-			padding: 30px 0;
-		}
-	}
-
 	.footer {
 		&__top-inner {
 			// display: block;
@@ -239,6 +266,27 @@
 
 		&__email {
 			order: 1;
+		}
+	}
+
+	.contacts {
+		padding: 60px 0 0;
+	}
+
+	.our-addresses {
+		&__content {
+			display: block;
+		}
+
+		&__left, &__right {
+			width: 100%;
+		}
+
+		&__left {
+			&-map {
+				height: 400px;
+				margin-bottom: 30px;
+			}
 		}
 	}
 }
@@ -391,6 +439,14 @@
 			margin-bottom: 15px;
 		}
 	}
+
+	.contacts {
+		&-card {
+			&__inner {
+				padding: 30px;
+			}
+		}
+	}
 }
 
 @media(max-width: 576px) {
@@ -514,6 +570,46 @@
 
 		&__contacts {
 			margin-bottom: 21px;
+		}
+	}
+
+	.contacts {
+		&__cards {
+			display: block;
+		}
+
+		&__card {
+			width: 100%;
+
+			&:nth-last-child(-n+2) {
+				margin-bottom: 20px;
+			}
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+
+		&-card {
+			&__inner {
+				padding: 20px;
+			}
+
+			&__left, &__right {
+				max-width: none;
+			}
+
+			&__post {
+				margin-bottom: 20px;
+			}
+		}
+	}
+
+	.our-addresses {
+		&__left {
+			&-map {
+				height: 259px;
+			}
 		}
 	}
 }
