--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -108,15 +108,23 @@
 	}
 }
 
-@media(max-width: 1100px) {
+@media(max-width: 1150px) {
 	.contacts {
 		&-card {
 			&__inner {
 				flex-direction: column;
 			}
 
-			&__left, &__right {
+			// &__left, &__right {
+			// 	max-width: none;
+			// }
+			
+			&__left {
 				max-width: none;
+			}
+
+			&__right {
+				width: auto;
 			}
 
 			&__post {
@@ -269,11 +277,17 @@
 		}
 	}
 
-	.contacts {
-		padding: 60px 0 0;
+	// .contacts {
+	// 	padding: 60px 0 0;
+	// }
+
+	.main-section {
+		padding: 60px 0 90px;
 	}
 
 	.our-addresses {
+		padding: 0 0 90px;
+
 		&__content {
 			display: block;
 		}
