--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1144,8 +1144,13 @@ body {
 /* FOOTER */
 
 /* CONTACTS */
+
+.main-section {
+	padding: 90px 0 120px;
+}
+
 .contacts {
-	padding: 90px 0 0;
+	// padding: 90px 0 0;
 
 	&__title {
 
@@ -1181,7 +1186,8 @@ body {
 		}
 
 		&__left {
-			max-width: 243px;
+			max-width: 242px;
+			margin-right: 15px;
 		}
 
 		&__post {
@@ -1189,7 +1195,8 @@ body {
 		}
 
 		&__right {
-			max-width: 190px;
+			// max-width: 190px;
+			width: 190px;
 		}
 
 		&__fio {
@@ -1230,6 +1237,8 @@ body {
 
 /* OUR-ADDRESSES */
 .our-addresses {
+	padding: 0 0 120px;
+
 	&__title {
 
 	}
@@ -1245,7 +1254,7 @@ body {
 	}
 
 	&__left {
-		max-width: 485px;
+		max-width: 490px;
 		// margin-right: 20px;
 
 		&-address {
@@ -1265,7 +1274,7 @@ body {
 	}
 
 	&__right {
-		max-width: 586px;
+		max-width: 601px;
 
 		&-address {
 			line-height: 130%;
