--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -461,6 +461,30 @@
 			}
 		}
 	}
+
+	.vacancy {
+		&__cards {
+
+		}
+
+		&__card {
+			width: 100%;
+
+			&:nth-last-child(-n+2) {
+				margin-bottom: 20px;
+			}
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+
+		&-card {
+			&__inner {
+				padding: 30px;
+			}
+		}
+	}
 }
 
 @media(max-width: 576px) {
@@ -623,6 +647,14 @@
 		&__left {
 			&-map {
 				height: 259px;
+			}
+		}
+	}
+
+	.vacancy {
+		&-card {
+			&__inner {
+				padding: 20px;
 			}
 		}
 	}
