--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1200,7 +1200,7 @@ body {
 		}
 
 		&__fio {
-			font-family: 'Montserrat';
+			color: $green;
 			font-weight: 600;
 			line-height: 130%;
 			margin-bottom: 20px;
@@ -1264,7 +1264,7 @@ body {
 			span {
 				display: block;
 				font-weight: 600;
-				color: #01372A;
+				color: $green;
 			}
 		}
 
@@ -1310,5 +1310,74 @@ body {
 	}
 }
 /* OUR-ADDRESSES */
+
+/* VACANCY */
+.vacancy {
+	&__title {
+
+	}
+
+	&__cards {
+		margin: 0 -10px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	&__card {
+		// background-color: #F2F2F2;
+		width: 50%;
+		padding: 0 10px;
+		margin-bottom: 20px;
+
+		&:nth-last-child(-n+2) {
+			margin-bottom: 0;
+		}
+	}
+
+	&-card {
+		&__inner {
+			padding: 40px;
+			height: 100%;
+			background-color: #f2f2f2;
+			// display: flex;
+			// justify-content: space-between;
+		}
+
+		&__post {
+			color: $green;
+			font-weight: 600;
+			line-height: 130%;
+			margin-bottom: 20px;
+		}
+
+		&__requirements {
+			padding-left: 10px;
+
+			&-item {
+				line-height: 130%;
+				position: relative;
+				padding-left: 10px;
+				margin-bottom: 10px;
+
+				&:last-child {
+					margin-bottom: 0;
+				}
+
+				&:before {
+					content: "";
+					display: block;
+					width: 5px;
+					height: 5px;
+					border-radius: 100%;
+					background-color: $black;
+					position: absolute;
+					left: 0;
+					top: 9px;
+				}
+			}
+		}
+	}
+}
+/* VACANCY */
 
 @import "media.scss";
