--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -470,13 +470,13 @@
 		&__card {
 			width: 100%;
 
-			&:nth-last-child(-n+2) {
-				margin-bottom: 20px;
-			}
+			// &:nth-last-child(-n+2) {
+			// 	margin-bottom: 20px;
+			// }
 
-			&:last-child {
-				margin-bottom: 0;
-			}
+			// &:last-child {
+			// 	margin-bottom: 0;
+			// }
 		}
 
 		&-card {
@@ -619,13 +619,13 @@
 		&__card {
 			width: 100%;
 
-			&:nth-last-child(-n+2) {
-				margin-bottom: 20px;
-			}
+			// &:nth-last-child(-n+2) {
+			// 	margin-bottom: 20px;
+			// }
 
-			&:last-child {
-				margin-bottom: 0;
-			}
+			// &:last-child {
+			// 	margin-bottom: 0;
+			// }
 		}
 
 		&-card {
