--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1163,6 +1163,7 @@ body {
 		margin: 0 -10px;
 		display: flex;
 		flex-wrap: wrap;
+		margin-bottom: -20px;
 	}
 
 	&__card {
@@ -1171,9 +1172,9 @@ body {
 		padding: 0 10px;
 		margin-bottom: 20px;
 
-		&:nth-last-child(-n+2) {
-			margin-bottom: 0;
-		}
+		// &:nth-last-child(-n+2) {
+		// 	margin-bottom: 0;
+		// }
 	}
 
 	&-card {
@@ -1321,6 +1322,7 @@ body {
 		margin: 0 -10px;
 		display: flex;
 		flex-wrap: wrap;
+		margin-bottom: -20px;
 	}
 
 	&__card {
@@ -1329,9 +1331,9 @@ body {
 		padding: 0 10px;
 		margin-bottom: 20px;
 
-		&:nth-last-child(-n+2) {
-			margin-bottom: 0;
-		}
+		// &:nth-last-child(-n+2) {
+		// 	margin-bottom: 0;
+		// }
 	}
 
 	&-card {
