--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -692,6 +692,7 @@ body {
 
 	&__items {
 		display: flex;
+		flex-wrap: wrap;
 		margin: 0 -10px;
 	}
 
@@ -699,15 +700,15 @@ body {
 		width: 50%;
 		padding: 10px;
 		
-		a {
-			display: block;
-			height: 100%;
-			transition: .3s linear transform;
+		// a {
+		// 	display: block;
+		// 	height: 100%;
+		// 	transition: .3s linear transform;
 
-			&:hover {
-				transform: translateY(-10px);
-			}
-		}
+		// 	&:hover {
+		// 		transform: translateY(-10px);
+		// 	}
+		// }
 	}
 
 	&-item {
@@ -716,6 +717,11 @@ body {
 			background: #F2F2F2;
 			box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.08);
 			padding: 50px 40px;
+		}
+
+		&__img {
+			max-width: 100%;
+			margin-bottom: 20px;
 		}
 
 		&__title {
@@ -729,14 +735,37 @@ body {
 		&__text {
 			font-size: 18px;
 			line-height: 130%;
-			color: $black;
+			// color: $black;
 			margin-bottom: 26px;
+		}
+
+		&__bottom {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 		}
 	
 		&__date {
 			font-size: 18px;
 			line-height: 130%;
 			color: #898989;
+		}
+
+		&__link {
+			color: #01372A;
+			position: relative;
+			padding-bottom: 4px;
+
+			&:after {
+				content: "";
+				display: block;
+				width: 100%;
+				height: 1px;
+				background-color: #01372A;
+				position: absolute;
+				bottom: 0;
+				left: 0;
+			}
 		}
 	}
 
