--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -77,6 +77,27 @@
 		}
 	}
 
+	.we-produce {
+		&__col {
+			width: 50%;
+
+			&:last-child {
+				width: 100%;
+				display: flex;
+				margin-top: 20px;
+
+				.we-produce__card:first-child {
+					margin-bottom: 0;
+					margin-right: 20px;
+				}
+			}
+
+			&:last-child .we-produce__card {
+				width: 50%;
+			}
+		}
+	}
+
 	.pavilions {
 		&__right {
 			padding-right: 9%;
@@ -591,22 +612,22 @@
 		}
 	}
 
-	.we-produce {
-		&__col {
-			width: 50%;
+	// .we-produce {
+	// 	&__col {
+	// 		width: 50%;
 
-			&:last-child {
-				width: 100%;
-				display: flex;
-				margin-top: 20px;
+	// 		&:last-child {
+	// 			width: 100%;
+	// 			display: flex;
+	// 			margin-top: 20px;
 
-				.we-produce__card:first-child {
-					margin-bottom: 0;
-					margin-right: 20px;
-				}
-			}
-		}
-	}
+	// 			.we-produce__card:first-child {
+	// 				margin-bottom: 0;
+	// 				margin-right: 20px;
+	// 			}
+	// 		}
+	// 	}
+	// }
 
 	.swiper {
 		&-wrapper {
