--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -123,9 +123,11 @@ body {
 					background-image: url("@img/language-arrow.svg");
 					position: absolute;
 					right: -15px;
-					top: 55%;
+					top: 10px;
+					// top: 55%;
+					// transform: translateY(-45%);
+
 					// transform: translateY(-45%) rotate(180deg);
-					transform: translateY(-45%);
 					cursor: pointer;
 					transition: .3s linear transform;
 				}
@@ -151,17 +153,19 @@ body {
 			position: absolute;
 			top: 100%;
 			// padding-top: 10px;
-			padding: 10px;
+			// padding: 10px;
+			padding: 43px 32px;
 			transform: translateX(-10px);
 			background-color: #fff;
 			z-index: 100;
+			margin-top: 24px;
 
 			opacity: 0;
 			visibility: hidden;
 			transition: .3s linear;
 
 			&-item {
-				margin-bottom: 7px;
+				margin-bottom: 30px;
 
 				a {
 					color: $black;
@@ -416,6 +420,7 @@ body {
 	}
 
 	&__img {
+		width: 50px;
 		margin-right: 13px;
 	}
 
@@ -616,6 +621,10 @@ body {
 /* INFO */
 
 /* WE-PRODUCE */
+.products .we-produce {
+	padding: 0;
+}
+
 .we-produce {
 	padding: 120px 0 0 0;
 
@@ -652,6 +661,11 @@ body {
 
 	&__card {
 		position: relative;
+		// cursor: pointer;
+		
+		&:hover .we-produce-card__content {
+			display: block;
+		}
 	}
 
 	&-card {
@@ -680,6 +694,53 @@ body {
 			font-size: 24px;
 			line-height: 1.208;
 			color: $white;
+		}
+
+		&__content {
+			display: none;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 100;
+			height: 100%;
+			padding: 25px;
+			background-color: $green;
+		}
+
+		&__content-title {
+			color: $white;
+			line-height: 130%;
+		}
+
+		&__content-link {
+			font-weight: 600;
+			font-size: 16px;
+			line-height: 1.25;
+			color: rgba(255, 255, 255, 0.85);
+			position: absolute;
+			bottom: 25px;
+			transition: .3s linear color;
+			padding-bottom: 6px;
+			transition: .3s linear color;
+		
+			&:after {
+				content: "";
+				display: block;
+				width: 100%;
+				height: 1px;
+				background-color: rgba(255, 255, 255, 0.85);
+				position: absolute;
+				bottom: 0;
+				transition: .3s linear background-color;
+			}
+
+			&:hover {
+				color: #fff;
+
+				&:after {
+					background-color: #fff;
+				}
+			}
 		}
 	}
 }
