--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -158,18 +158,22 @@ body {
 			transform: translateX(-10px);
 			background-color: #fff;
 			z-index: 100;
-			margin-top: 24px;
+			// margin-top: 24px;
 
 			opacity: 0;
 			visibility: hidden;
-			transition: .3s linear;
+			transition: .3s linear opacity;
 
 			&-item {
 				margin-bottom: 30px;
+				&:last-child {
+					margin-bottom: 0;
+				}
 
 				a {
 					color: $black;
 					position: relative;
+					white-space: pre;
 
 					&.active {
 						padding-bottom: 4px;
@@ -191,10 +195,18 @@ body {
 
 	&-burger {
 		&__nav {
-			max-height: 0;
+			// max-height: 0;
 			overflow: hidden;
-			transition: .3s linear max-height;
+			// transition: .3s linear max-height;
+			display: none;
 			// padding: 0 20px;
+
+			position: absolute;
+			top: 0;
+			width: 100%;
+			background-color: #f9f9f9;
+			z-index: 100;
+			padding: 48px 0 58px;
 
 			&.active {
 				// display: block;
@@ -207,13 +219,13 @@ body {
 			&__list {
 				// display: flex;
 				max-width: 1232px;
-				margin: 0 auto;
+				margin: 36px auto 0;
 				padding: 0 20px;
 			}
 		
 			&__item {
 				margin-right: 45px;
-				margin-bottom: 10px;
+				margin-bottom: 30px;
 				&:last-child {
 					margin-bottom: 20px;
 				}
@@ -248,7 +260,7 @@ body {
 
 				&.have-children {
 					&:before {
-						content: "";
+						// content: "";
 						display: block;
 						width: 10px;
 						height: 5px;
@@ -288,28 +300,41 @@ body {
 					}
 				}
 			}
+
+			&__top {
+				display: flex;
+				align-items: center;
+
+				img {
+					margin-left: 4px;
+					cursor: pointer;
+				}
+			}
 	
 			&__menu {
 				// position: absolute;
 				// top: 100%;
 				// padding-top: 10px;
-				margin-top: 10px;
-				margin-left: 10px;
-				background-color: #fff;
+				margin-top: 30px;
+				// margin-left: 10px;
+				background-color: #f9f9f9;
 				z-index: 100;
-	
+				
 				// opacity: 0;
 				// visibility: hidden;
-	
+				display: none;
+				
 				&-item {
-					margin-bottom: 7px;
+					margin-bottom: 15px;
 	
 					a {
-						color: $black;
+						// color: $black;
+						color: #828282;
 						position: relative;
 
 						&.active {
 							padding-bottom: 4px;
+							color: $black;
 			
 							&:after {
 								content: "";
@@ -1490,6 +1515,26 @@ body {
 	}
 }
 /* VACANCY */
+
+/* HALL-OF-FAME */
+.hall-of-fame {
+	&__imgs {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -10px;
+		margin-bottom: -20px;
+	}
+
+	&__img {
+		width: 50%;
+		padding: 0 10px;
+		margin-bottom: 20px;
+	}
+}
+/* HALL-OF-FAME */
+
+
+
 
 .pagination {text-align: center;margin-top: 30px;}
 .pagination li {display: inline-block;padding: 2px;list-style-type: none;}
