--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -62,6 +62,8 @@
 
 		&__burger {
 			display: block;
+			position: relative;
+			z-index: 1000;
 		}
 		
 		&-widget {
@@ -726,6 +728,12 @@
 					margin-bottom: 10px;
 				}
 			}
+		}
+	}
+
+	.hall-of-fame {
+		&__img {
+			width: 100%;
 		}
 	}
 }
