--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -384,10 +384,37 @@ body {
 				bottom: 3px;
 			}
 		}
+
+		&__language.active {
+			&:before {
+				transform: rotate(180deg);
+			}
+		}
 	
 		&__language-text {
 			font-weight: 500;
 			color: $green;
+		}
+
+		&__language-list {
+			position: absolute;
+			z-index: 10;
+			width: 100%;
+			background-color: $white;
+			padding: 20px 0;
+			display: none;
+		}
+
+		&__language-items {
+			display: grid;
+			// grid-template-columns: repeat(7, 1fr);
+			grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+			gap: 10px;
+		}
+
+		&__language-item {
+			font-size: 14px;
+			cursor: pointer;
 		}
 	}
 
@@ -1112,6 +1139,7 @@ body {
 				vertical-align: sub;
 				font-size: 16px;
 				line-height: 130%;
+				color: $black;
 			}
 		}
 	
