fixed eye widget

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -655,9 +655,9 @@
 				// margin-left: 8px;
 				display: none;
 
-				&-img {
-					margin-right: 13px;
-				}
+				// &-img {
+				// 	margin-right: 13px;
+				// }
 
 				// span {
 				// 	display: none;
