--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1562,12 +1562,215 @@ body {
 }
 /* HALL-OF-FAME */
 
-
+/**/
 .spec {
 	display: flex;
 	align-items: center;
 }
+/**/
 
+/* ELECTRONIC-APPEALS */
+.electronic-appeals {
+	padding: 0 0 120px;
+
+	&__title {
+
+	}
+
+	&__content {
+	}
+
+	&__tabs {
+		margin-bottom: 40px;
+
+		&-btns {
+			display: flex;
+		}
+
+		&-content {
+			background-color: #F2F2F2;
+			box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.08);
+			padding: 110px 101px 50px;
+		}
+
+		&-btn {
+			background-color: #F2F2F2;
+			padding: 17px 93px;
+			font-size: 18px;
+			line-height: 130%;
+			color: #000000;
+
+			&.active {
+				background-color: rgba(1, 55, 42, 0.85);
+				color: $white;
+			}
+		}
+
+		&-form {
+			display: flex;
+			margin: 0 -10px;
+		}
+	}
+
+	&__form {
+		&-left, &-right {
+			width: 50%;
+			padding: 0 10px;
+		}
+
+		&-left {
+		}
+
+		&-right {
+		}
+	
+		&-input, &-textarea {
+			width: 100%;
+			display: block;
+			padding: 17px 25px;
+			margin-bottom: 20px;
+
+			&::placeholder {
+				font-size: 16px;
+				line-height: 1.25;
+				color: #828282;
+			}
+		}
+
+		&-input {
+			height: 53px;
+		}
+
+		&-textarea {
+			resize: none;
+			padding-bottom: 77px;
+		}
+
+		&-submit {
+			background-color: rgba(1, 55, 42, 0.85);
+			border-radius: 20px;
+			padding: 13px 40px;
+			color: $white;
+			font-weight: 600;
+			font-size: 16px;
+			line-height: 1.25;
+			cursor: pointer;
+			margin-top: 20px;
+		}
+
+		&-file {
+			input {
+				display: none;
+			}
+
+			div {
+				font-size: 14px;
+				line-height: 1.214;
+				color: #828282;
+				margin-top: 22;
+				margin-bottom: 24px;
+			}
+
+			label {
+				display: inline-block;
+				font-size: 16px;
+				line-height: 1.25;
+				color: $green;
+				padding: 11px 26px;
+				border: 2px solid $green;
+				border-radius: 20px;
+				cursor: pointer;
+			}
+		}
+
+		&-checkbox {
+			display: flex;
+			align-items: center;
+		}
+	}
+
+	&__form-real-checkbox {
+		display: none;
+	}
+
+	&__form-checkbox-text {
+		font-size: 14px;
+		line-height: 1.214;
+		color: #828282;
+
+		a {
+			color: #828282;
+			padding-bottom: 2px;
+			position: relative;
+
+			&:after {
+				content: "";
+				display: block;
+				position: absolute;
+				bottom: 0;
+				right: 0;
+				width: 100%;
+				height: 1px;
+				background-color: #828282;
+			}
+		}
+	}
+
+	&__form-fake-checkbox {
+		width: 15px;
+		height: 15px;
+		border: 1px solid $green;
+		margin-right: 15px;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		transition: .3s linear background-color;
+
+		svg path {
+			transition: .3s linear stroke;
+		}
+	}
+
+	&__form-real-checkbox:checked + &__form-fake-checkbox {
+		background-color: $green;
+
+		svg path {
+			stroke: $white;
+		}
+	}
+
+	&__link {
+		display: inline-block;
+		font-weight: 600;
+		line-height: 130%;
+		color: $green;
+		position: relative;
+		padding-bottom: 4px;
+
+		&:after {
+			content: "";
+			display: block;
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			height: 1px;
+			background-color: $green;
+		}
+	}
+}
+.electronic-appeals
+.electronic-appeals
+.electronic-appeals
+.electronic-appeals__tabs
+.electronic-appeals__tabs
+.electronic-appeals__tabs
+.electronic-appeals__tabs
+.electronic-appeals
+.electronic-appeals__form
+.electronic-appeals__form
+/* ELECTRONIC-APPEALS */
 
 .pagination {text-align: center;margin-top: 30px;}
 .pagination li {display: inline-block;padding: 2px;list-style-type: none;}
